--- a/project/specialties/omfs.html
+++ b/project/specialties/omfs.html
@@ -4,28 +4,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>omfs</title>
+    <title>oral and maxillofacial surgery</title>
     <meta name="Author" content="Godwin Bassey">
     <meta name="Description" content="Home page for Dentsitry OTG">
-    <link rel="stylesheet" href="styles/main-small.css">
-    <link rel="stylesheet" href="styles/main-large.css">
+    <link rel="stylesheet" href="../styles/main-small.css">
+    <link rel="stylesheet" href="../styles/main-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Londrina+Sketch&family=Montserrat:ital@0;1&display=swap"
         rel="stylesheet">
+    <script src="../scripts/app.js" defer></script>
 </head>
 
 <body>
     <header>
-        <span id="logo"></span>
-        <h1>Denistry On The Go</h1>
+        <img src="../images/logo.svg" alt="logo" class="logo" loading="lazy">
+        <a href="../index.html"><h1>Denistry OTG</h1></a>
+        <span id="hamburger"></span>
         <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="nav-footer/study-plan.html">Study plan</a></li>
-                <li><a href="further-study.html">Further study</a></li>
-                <li><a href="nav-footer/contact.html">Contact us</a></li>
+            <ul class="nav-items">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../nav-footer/study-plan.html">Study plan</a></li>
+                <li><a href="../nav-footer/resources-further-study.html">Further study</a></li>
+                <li><a href="../nav-footer/contact.html">Contact us</a></li>
             </ul>
         </nav>
     </header>
@@ -33,45 +35,79 @@
         <h2 class="page-title"></h2>
         <div id="banner">
             <!-- use dynamic js to generate welcome message based on local storage number of visits -->
-            <p class="exam-countdown"></p>
+            <p class="welcome-message"></p>
+            <form action="username" method="get" class="name-form">
+                <p id="form-instr">All fields required</p>
+
+                <label>What is your name? <input type="text" id="username" name="username" required autocomplete="additional-name"></label>
+
+                <label>When is your exam? <input type="date" name="install-date" id="exam-date" required></label>
+                <input id="submit" type="submit" value="Submit Username">
+            </form>
         </div>
         <div id="content-box">
-            <section class="content"></section>
-            <section class="content"></section>
-            <section class="content"></section>
-            <section class="content"></section>
-            <section class="content"></section>
-            <section class="content"></section>
-            <section class="content"></section>
-            <section class="content"></section>
-            <section class="content"></section>
-            <section class="content"></section>
-        </div>
-        <div id="faq">
-            <ul>
-                <li>faq 1</li>
-                <li>faq 2</li>
-                <li>faq 3</li>
-                <li>faq 4</li>
-                <li>faq 5</li>
-            </ul>
-        </div>
-        <div id="sidebar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="specialties/perio.html">Periodontics</a></li>
-                <li><a href="specialties/preventive.html">Preventive Dentistry</a></li>
-                <li><a href="specialties/restorative.html">Restorative Dentistry</a></li>
-                <li><a href="specialties/omfs.html">Oral and Maxillofacial Surgery</a></li>
-                <li><a href="specialties/om-op.html">Oral Medicine/Oral Pathology</a></li>
-                <li><a href="specialties/oral-biology.html">Oral Biology</a>Oral Biology</li>
-                <li><a href="nav-footer/resources-further-study.html">Further Study</a></li>
-            </ul>
+            <article class="must">
+                <h3>What are the basic technical considerations in performing an incision?</h3>
+                <p>
+                    <ul>
+                        <li>Use a sharp blade of appropriate size.</li>
+                        <li>A firm, continuous stroke is preferable to short, soft, repeated strokes.</li>
+                        <li>Avoid vital structures.</li>
+                        <li>Use incisions that are parallel to relaxed skin tension lines.</li>
+                        <li>Consider the anatomy of the site in placement of the incision.</li>
+                    </ul>
+                </p>
+            </article>
+
+            <article class="nice">
+                <h3> For making an incision in an epithelial surface, how should the scalpel blade be oriented?</h3>
+                <p>
+                To avoid bias, the incision should be made parallel to the epithelial surface.
+                </p>
+            </article>
+
+            <article class="must">
+                <h3>What factors influence the placement of incisions in the mouth?</h3>
+                <p>
+                    <ul>
+                        <li>Anatomy and location of vital structures</li>
+                        <li>Convenience and access</li>
+                    </ul>
+                </p>
+            </article>
+
+            <article class="must">
+                <h3>What are the principles of flap design?</h3>
+                <p>
+                    <ul>
+                        <li>Flap design should ensure adequate blood supply; the base of the flap should be larger than the apex.</li>
+                        <li>Reflection of the flap should adequately expose the operative field.</li>
+                        <li>Flap design should permit atraumatic closure of the wound.</li>
+                    </ul>
+                </p>
+            </article>
+
+            <article class="nice">
+                <h3>What are the most frequent causes of the tearing of mucogingival flaps?</h3>
+                <p>
+                    <ol>
+                        <li>Flaps are too small to provide adequate exposure.</li>
+                        <li>Too much force is used to elevate the flaps.</li>
+                        <li>The flap is not being elevated in the subperiosteal plane</li>
+                    </ol>
+                </p>
+            </article>
         </div>
     </main>
     <footer>
         <p>
-            <a href="#">References</a>
+            &copy;<span id="currentYear"></span>
+            <span>Godwin Bassey</span>
+            <span>Calabar, Nigeria</span>
+        </p>
+        <p id="lastModified"></p>
+        <p>
+            <a href="../nav-footer/resources-further-study.html"><span>References</span></a>
         </p>
     </footer>
 </body>
